--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<header></header>
 	<ul>
+		<li>sync.choi</li>
 		<li>Git 소개</li>
 		<li>버전</li>
 		<li>Branch</li>
@@ -15,6 +16,7 @@
 		<li>push</li>
 		<li>pull</li>
 		<li>push.choi</li>
+		<li>pull.lee</li>
 	</ul>
 	</body>
 </html>
